# TSK

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  utils.py
todo_cli_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
